Update the Model.java file, add reflection exception handling, and use getDeclaredConstructor().newInstance() instead of the obsolete method newInstance().